# simple-sns

./: .gitignore  Cargo.toml  README.md  dfx.json  package.json
canisters/dapp/: dapp.mo
canisters/frontend/: index.html  package-lock.json  package.json
canisters/frontend/elements/: ssns-app.ts  ssns-blank.ts  ssns-configuration.ts  ssns-create-proposal.ts  ssns-proposal.ts  ssns-proposals.ts
canisters/frontend/types/: index.d.ts
canisters/governance/: Cargo.toml
canisters/governance/src/: lib.rs  schema.graphql
