
[package]
name = "governance"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# TODO we have some version mismatches with candid and the latest ic-cdk and ic-cdk-macros
# ic-cdk = "0.3.2"
# ic-cdk-macros = "0.3.2"
ic-cdk = "0.3.0"
ic-cdk-macros = "0.3.0"
# candid = "0.7.8"
candid = "0.6.8"
serde = "1.0.130"
sudograph = "0.4.3"
serde_json = "1.0.68"